25/07/13 -*- Version 1.0.0 -*-

15/01/2010 Julien Dutheil
* Initial version.