@@ -24,10 +24,11 @@ maf.filter=\
         BlockCounts(),                                                   \
         ModelFit(                                                        \
           model=HKY85(kappa=1, theta=0.5, theta1=0.5, theta2=0.5),       \
+          root_freq=Full,                                                \
           rate_distribution=Gamma(n=4, alpha=0.5),                       \
           tree=BioNJ,                                                    \
-          parameters_output=(HKY85.theta,HKY85.theta1,HKY85.theta2,      \
-            HKY85.kappa),                                                \
+          parameters_output=(HKY85.theta_1,HKY85.theta1_1,HKY85.theta2_1,\
+            HKY85.kappa_1, Full.theta, Full.theta1, Full.theta2),        \
           fixed_parameters=(),                                           \
           reestimate_brlen=yes,                                          \
           max_freq_gaps=0.3,                                             \
