@@ -1,3 +1,6 @@
+05/04/14 Julien Dutheil
+* Added ML modle fit (stationary and non-stationary).
+
 25/07/13 -*- Version 1.0.0 -*-
 
 15/01/2010 Julien Dutheil
